locale: Added mod name and description to the english locale

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
 [mod-name]
-title=YOUR MOD TITLE
+title=Visible Planets Scale
 
 [mod-description]
-description=YOUR MOD DESCRIPTION
+description=Adds automatic scaling to planets rendered by Visual Planets based on their gravity
