feat: Moons are now also scaled properly and shifted so they don't fall behind large planets.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -7,7 +7,11 @@ description=Adds automatic scaling to planets rendered by Visual Planets based o
 [mod-setting-name]
 vp-scale-min=Minimum planet scale
 vp-scale-max=Maximum planet scale
+vp-scale-min-moon=Minimum moon scale (PlanetsLib)
+vp-scale-max-moon=Maximum moon scale (PlanetsLib)
 
 [mod-setting-description]
 vp-scale-min=The minimum scale multiplier relative to Nauvis for a planet with very little gravity.
 vp-scale-max=The maximum scale multiplier relative to Nauvis for a planet with very high gravity.
+vp-scale-min-moon=Minimum scale of the orbiting planets/moons introduced by PlanetsLib. This mods scaling factor is multiplied by Visible Planets' "Background bodies scaling" setting.
+vp-scale-max-moon=Maximum scale of the orbiting planets/moons introduced by PlanetsLib. This mods scaling factor is multiplied by Visible Planets' "Background bodies scaling" setting.
