feat: Added planet rotation speed multiplier based on their day/night cylce duration relative to Nauvis. This can be disabled with a startup setting.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -7,11 +7,13 @@ description=Adds automatic scaling to planets rendered by Visual Planets based o
 [mod-setting-name]
 vp-scale-min=Minimum planet scale
 vp-scale-max=Maximum planet scale
+vp-scale-enable-rotation-multiplier=Day/Night Cyle rotation speed adjustment
 vp-scale-min-moon=Minimum moon scale (PlanetsLib)
 vp-scale-max-moon=Maximum moon scale (PlanetsLib)
 
 [mod-setting-description]
 vp-scale-min=The minimum scale multiplier relative to Nauvis for a planet with very little gravity.
 vp-scale-max=The maximum scale multiplier relative to Nauvis for a planet with very high gravity.
+vp-scale-enable-rotation-multiplier=Enable rotation speed adjustment based on the planet's day/night cycle duration relative to Nauvis' day/night cycle. Shorter day/night cycles result in faster rotation speeds, longer cycles result in slower rotation speeds.
 vp-scale-min-moon=Minimum scale of the orbiting planets/moons introduced by PlanetsLib. This mods scaling factor is multiplied by Visible Planets' "Background bodies scaling" setting.
 vp-scale-max-moon=Maximum scale of the orbiting planets/moons introduced by PlanetsLib. This mods scaling factor is multiplied by Visible Planets' "Background bodies scaling" setting.
